What's new in ZODB3 3.3 ?
=========================
Release date: DD-MMM-YYYY

Tools
-----

ZODB.utils.oid_repr() changed to add a leading "0x", and to strip leading
zeroes.  This is used, e.g., in the detail of a POSKeyError exception, to
identify the missing oid.  Before, the output was ambiguous.  For example,
oid 17 was displayed as 0000000000000011.  As a Python integer, that's
octal 9.  Or was it meant to be decimal 11?  Or was it meant to be hex?
Now it displays as 0x11.

fsrefs.py:

    When run with -v, produced tracebacks for objects whose creation was
    merely undone.  This was confusing.  Tracebacks are now produced only
    if there's "a real" problem loading an oid.

    If the current revision of object O refers to an object P whose
    creation has been undone, this is now identified as a distinct case.

    Captured and ignored most attempts to stop it via Ctrl+C.  Repaired.

    Now makes two passes, so that an accurate report can be given of all
    invalid references.

analyze.py produced spurious "len of unsized object" messages when
finding a data record for an object uncreation or version abort.  These
no longer appear.


What's new in ZODB3 3.3 beta 2
==============================
Release date: 13-Aug-2004

Transaction Managers
--------------------

Zope3-dev Collector #139: Memory leak involving buckets and connections

The transaction manager internals effectively made every Connection
object immortal, except for those explicitly closed.  Since typical
practice is not to close connections explicitly (and closing a DB
happens not to close the connections to it -- although that may
change), this caused massive memory leaks when many connections were
opened.  The transaction manager internals were reworked to use weak
references instead, so that connection memory (and other registered
synch objects) now get cleaned up when nothing other than the
transaction manager knows about them.

Storages
--------
